[tool.poetry]
name = "ilpas"
version = "0.1.0"
description = ""
authors = ["Maguire <papaymaguire@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
click = {version = "^8.1.8", optional = true}

[tool.poetry.extras]
cli=["click"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
testcontainers = "^4.9.0"
mypy = "^1.13.0"
uvicorn = "^0.34.0"


[tool.pyright]
strict = true
reportMissingTypeStubs = true
reportUnboundVariable = true
reportMissingImports = false
reportOptionalMemberAccess = true
reportGeneralTypeIssues = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
